; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_netjet.c_fill_mem.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_netjet.c_fill_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.BCState = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.BCState*, i32*, i32, i32, i32)* @fill_mem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fill_mem(%struct.BCState* %0, i32* %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.BCState*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store %struct.BCState* %0, %struct.BCState** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  store i32 255, i32* %11, align 4
  store i32 0, i32* %12, align 4
  %15 = load i32*, i32** %7, align 8
  store i32* %15, i32** %13, align 8
  %16 = load i32, i32* %10, align 4
  %17 = load i32, i32* %12, align 4
  %18 = or i32 %17, %16
  store i32 %18, i32* %12, align 4
  %19 = load i32, i32* %9, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %5
  %22 = load i32, i32* %12, align 4
  %23 = shl i32 %22, 8
  store i32 %23, i32* %12, align 4
  %24 = load i32, i32* %11, align 4
  %25 = shl i32 %24, 8
  store i32 %25, i32* %11, align 4
  br label %26

26:                                               ; preds = %21, %5
  %27 = load i32, i32* %11, align 4
  %28 = xor i32 %27, -1
  store i32 %28, i32* %11, align 4
  store i32 0, i32* %14, align 4
  br label %29

29:                                               ; preds = %57, %26
  %30 = load i32, i32* %14, align 4
  %31 = load i32, i32* %8, align 4
  %32 = icmp slt i32 %30, %31
  br i1 %32, label %33, label %60

33:                                               ; preds = %29
  %34 = load i32, i32* %11, align 4
  %35 = load i32*, i32** %13, align 8
  %36 = load i32, i32* %35, align 4
  %37 = and i32 %36, %34
  store i32 %37, i32* %35, align 4
  %38 = load i32, i32* %12, align 4
  %39 = load i32*, i32** %13, align 8
  %40 = getelementptr inbounds i32, i32* %39, i32 1
  store i32* %40, i32** %13, align 8
  %41 = load i32, i32* %39, align 4
  %42 = or i32 %41, %38
  store i32 %42, i32* %39, align 4
  %43 = load i32*, i32** %13, align 8
  %44 = load %struct.BCState*, %struct.BCState** %6, align 8
  %45 = getelementptr inbounds %struct.BCState, %struct.BCState* %44, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %45, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = load i32*, i32** %47, align 8
  %49 = icmp ugt i32* %43, %48
  br i1 %49, label %50, label %56

50:                                               ; preds = %33
  %51 = load %struct.BCState*, %struct.BCState** %6, align 8
  %52 = getelementptr inbounds %struct.BCState, %struct.BCState* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %52, i32 0, i32 0
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 1
  %55 = load i32*, i32** %54, align 8
  store i32* %55, i32** %13, align 8
  br label %56

56:                                               ; preds = %50, %33
  br label %57

57:                                               ; preds = %56
  %58 = load i32, i32* %14, align 4
  %59 = add nsw i32 %58, 1
  store i32 %59, i32* %14, align 4
  br label %29

60:                                               ; preds = %29
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
